# fixwise-server

./: .gitignore  Cargo.toml  LICENSE  README.md  bacon.toml
database/: config.pgsql  config.sql  config.toml  schema.toml  setup.sql  setup.surql
database/frontend_views/: customers.json  inventory.json  tickets.json
database/view_configurations/: customers.toml  inventory.toml  tickets.toml
extensions/: iphone_all.toml
proc-macros/: Cargo.toml
proc-macros/src/: lib.rs
proc-macros/src/derives/: api.rs  database.rs  mod.rs
src/: customer.rs  database.rs  extension.rs  inventory.rs  main.rs  ticket.rs
src/api/: mod.rs
src/api/endpoints/: mod.rs
src/api/endpoints/formatted/: customers.rs  devices.rs  parts.rs  vendors.rs
src/api/endpoints/processed/: customers.rs  device_models.rs  devices.rs  invoices.rs  mod.rs  parts.rs  products.rs  services.rs  tickets.rs  vendors.rs
src/api/endpoints/raw/: invoices.rs  items.rs  mod.rs  products.rs  services.rs
src/api/endpoints/utils/: imei_check.rs  mod.rs
src/api/utils/: imei_check.rs
src/api/views/: customers.rs  device_models.rs  devices.rs  inventory.rs  mod.rs  parts.rs  tickets.rs  vendors.rs
src/api/views/formatted/: devices.rs  (+5 more)
src/database/: api.rs  config.rs  customers.rs  inventory.rs  loading_bar.rs  mod.rs  models.rs  shared_models.rs  tickets.rs  views.rs
src/database/shared_models/: tickets.rs
src/database/tables/: bundled_parts.rs  compatible_parts.rs  customers.rs  device_categories.rs  device_manufacturers.rs  device_models.rs  devices.rs  inventory.rs  invoice_items.rs  invoice_payments.rs  invoices.rs  items.rs  mod.rs  part_categories.rs  part_manufacturers.rs  parts.rs  product_prices.rs  products.rs  service_prices.rs  service_types.rs  services.rs  ticket_devices.rs  tickets.rs  type_allocation_codes.rs  vendors.rs
src/database/views/: customers.rs  device_models.rs  devices.rs  inventory.rs  invoices.rs  items.rs  mod.rs  parts.rs  products.rs  services.rs  tickets.rs  vendors.rs
src/extension/: conflicts.rs  mod.rs  tests.rs
src/extensions/: conflicts.rs  mod.rs  tests.rs
src/models/: common.rs  conversions.rs  database.rs  mod.rs  tests.rs
src/models/common/: ids.rs  mod.rs
(+1 files in other folders)
